---
Version: 3.0.0
Date: 2024-03-26
Description:
- Update the UI to support GNOME 46
- Fix duplicate notifications appearing between sessions
- Add a background app status message
---
Version: 2.1.0
Date: 2021-11-13
Description:
- Add break interval and duration choices for the 20-20-20 rule (#6)
- Add an option to disable screen locking (#15)
---
Version: 2.0.3
Date: 2020-12-16
Description:
- Change icon for the break settings button
- Fix an issue where breaks never stop when the session is inhibited
- Fix incorrect autostart file location
- Set a minimum GLib version to support the gnome-3-34 Snap extension
- Change Flatpak manifest to use socket=fallback-x11
- Work around metainfo being processed incorrectly in some cases
---
Version: 2.0.2
Date: 2020-11-25
Description:
- Fix timer circle colours with themes other than Adwaita
- Change Flatpak manifest to use socket=fallback-x11
---
Version: 2.0.1
Date: 2020-11-24
Description:
- Fix a bug where the idle monitor would be in an incorrect state at login
---
Version: 2.0
Date: 2020-11-24
Description:
- Support running as a Flatpak application
- Replace xrecord with MutterIdleMonitor
- Remove the app menu from the settings dialog
- Add a new application icon
- Animate the timer circles in the settings dialog
- Improve error handling
---
Version: 1.2
Date: 2014-03-28
Description:
- Bumped minimum GTK version
- Minor fixes for settings dialog
---
Version: 1.1
Date: 2013-09-22
Description:
- Redesigned "take a break" notifications
- New status and settings application
- Break timers are saved between sessions
- Bug fixes
---
Version: 1.0
Date: 2013-09-22
Description:
- First release