@@ -13,15 +13,17 @@
       Break Timer is easy to set up, so you can pick a break schedule that works for you and it will carry on working in the background.
     </p>
   </description>
-  <developer id="org.gnome">
-    <name>Dylan McCall, et al.</name>
-  </developer>
   <requires>
     <id version="1.0" compare="ge">org.gnome.Shell</id>
   </requires>
   <launchable type="desktop-id">@DAEMON_APPLICATION_ID@.desktop</launchable>
   <url type="homepage">https://wiki.gnome.org/Apps/BreakTimer</url>
   <url type="bugtracker">https://gitlab.gnome.org/GNOME/gnome-break-timer/issues</url>
+  <categories>
+    <category>GNOME</category>
+    <category>GTK</category>
+    <category>Utility</category>
+  </categories>
   <screenshots>
     <screenshot type="default">
       <caption>Easily turn on break timers</caption>
@@ -33,7 +35,12 @@
     </screenshot>
   </screenshots>
   <releases>
-    <release type="stable" version="3.0.0" date="2024-03-26T00:00:00Z">
+    <release type="stable" version="master">
+      <description>
+        <p>Add categories to metainfo</p>
+      </description>
+    </release>
+    <release type="stable" version="3.0.0" date="2024-03-23T00:00:00Z">
       <description>
         <ul>
           <li>Update the UI to support GNOME 46</li>
@@ -73,18 +80,6 @@
     <release type="stable" version="2.0.1" date="2020-11-24T00:00:00Z">
       <description>
         <p>Fix a bug where the idle monitor would be in an incorrect state at login</p>
-      </description>
-    </release>
-    <release type="stable" version="2.0" date="2020-11-24T00:00:00Z">
-      <description>
-        <ul>
-          <li>Support running as a Flatpak application</li>
-          <li>Replace xrecord with MutterIdleMonitor</li>
-          <li>Remove the app menu from the settings dialog</li>
-          <li>Add a new application icon</li>
-          <li>Animate the timer circles in the settings dialog</li>
-          <li>Improve error handling</li>
-        </ul>
       </description>
     </release>
   </releases>
